# EvalPipelineTTC

./: .env.example  .gitignore  README.md  pyproject.toml  report.py  requirements.txt  run_eval.py
.github/workflows/: test.yml
datasets/: conversational_samples.json  needle_samples.json  qa_samples.json  rag_samples.json  summarization_samples.json
eval/: __init__.py  client.py  llm_backend.py  logging_config.py  metrics.py  regression.py  runner.py  tokenizers.py
eval/tasks/: __init__.py  _common.py  base.py  conversational.py  long_context.py  qa.py  rag.py  summarization.py
examples/: compressed_llm_call.py
results/: sample_run.html  sample_run.json
tests/: test_client.py  test_compressing_backend.py  test_cost.py  test_idempotence.py  test_metrics.py  test_regression.py
